--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="home">
-  <div class="header rectangle-div">
+  <div class="header">
     <h1>Gemma - Economía circular para empresas</h1>
     <%= link_to "Iniciá el autodiagnóstico de tu empresa", new_company_registration_path(), class: "main-button" %>
   </div>
@@ -10,12 +10,14 @@
           <p>Bienvenidos a la herramienta digital de gestión y autodiagnóstico de circularidad de Pymes, que permite integrar y profesionalizar buenas prácticas sostenibles.</p>
           <p>A través de esta plataforma, facilitamos un recurso para que las empresas grandes impulsen a las pymes de su cadena de valor a mejorar sus modelos de negocios desde la perspectiva de la circularidad.</p>
         </div>
-        <div class="image-box-image"><div class="rectangle-div"></div></div>
+        <div class="image-box-image"><img src="/images/workers.jpg"/></div>
       </div>
     </div>
     <div class="section">
       <div class="image-box image-box-left">
-        <div class="image-box-image"><div class="rectangle-div"></div></div>
+        <div class="image-box-image">
+          <img src="/images/gennady.jpg"/>
+        </div>
         <div class="image-box-text">
           <p>Las PYMEs en Uruguay enfrentan el desafío de adaptarse a nuevos marcos regulatorios sobre información de sostenibilidad, empresas grandes que van avanzando hacia la exigencia de incorporación de buenas prácticas, y un mercado global cada vez más exigente en temas de sostenibilidad.</p>
           <p>Las grandes empresas, se ven cada vez más exigidas a trabajar con su cadena de valor y ampliar su perspectiva de impacto, impulsando mejoras, y tomando la corresponsabilidad de esta transformación.</p>
