--- a/app/assets/stylesheets/front.css
+++ b/app/assets/stylesheets/front.css
@@ -256,6 +256,11 @@ input {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  background-image: url('/images/shai-pal.jpg');
+  background-position: center;
+}
+.home .header h1 {
+  color: #fff;
 }
 
 .logo-slider{
