--- a/app/views/companies/_company_data.html.erb
+++ b/app/views/companies/_company_data.html.erb
@@ -1,17 +1,19 @@
 <div id="company-data">
-  <% if @company.logo.attached? %>
-    <%= image_tag @company.logo %>
+  <% if current_company.logo.attached? %>
+    <%= image_tag current_company.logo %>
   <% else %>
     <div class="rectangle-div"></div>
   <% end %>
   <div id="company-info" class="section">
-    <h1><%= @company.fake_name %></h1>
-    <h4>última puntuación</h4>
-    <span class="result">TODO</span>
-    <span>RUT: <%= @company.registration_number %></span>
-    <span>Persona de contacto: <%= @company.contact_name %></span>
-    <span>Teléfono: <%= @company.contact_tel %></span>
-    <span>Dirección: <%= @company.address %></span>
+    <h1><%= current_company.fake_name %></h1>
+    <% if !current_company.is_main_company %>
+      <h4>última puntuación</h4>
+      <span id="last-result">Aún no hay evaluaciones enviadas</span>
+    <% end %>
+    <span>RUT: <%= current_company.registration_number %></span>
+    <span>Persona de contacto: <%= current_company.contact_name %></span>
+    <span>Teléfono: <%= current_company.contact_tel %></span>
+    <span>Dirección: <%= current_company.address %></span>
     <%= link_to 'Editar datos de la empresa', edit_company_registration_path, class: 'main-button' %>
   </div>
 </div>
