Ajustes textos home

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -19,6 +19,7 @@
           <img src="/images/gennady.jpg"/>
         </div>
         <div class="image-box-text">
+		  <h2>¿Qué problema queremos solucionar?</h2>
           <p>Las PYMEs en Uruguay enfrentan el desafío de adaptarse a nuevos marcos regulatorios sobre información de sostenibilidad, empresas grandes que van avanzando hacia la exigencia de incorporación de buenas prácticas, y un mercado global cada vez más exigente en temas de sostenibilidad.</p>
           <p>Las grandes empresas, se ven cada vez más exigidas a trabajar con su cadena de valor y ampliar su perspectiva de impacto, impulsando mejoras, y tomando la corresponsabilidad de esta transformación.</p>
           <p>Las empresas uruguayas que no transformen su modelo de negocio hacia uno más sostenible corren el riesgo de perder competitividad y oportunidades de crecimiento.</p>
@@ -28,6 +29,7 @@
     <div class="section">
       <div class="image-box image-box-right">
         <div class="image-box-text">
+		  <h2>¿Cómo la herramienta o hace?</h2>
           <p>La Plataforma busca nutrir esfuerzos ya implementados en el país (Ej. Estrategia Nacional de Economía Circular) facilitando una herramienta de gestión que permita integrar y profesionalizar las buenas prácticas en las pymes uruguayas, generando informes con identificación de mejoras, para profesionalizar la gestión estratégica, y potenciar la competitividad, afianzando los vínculos comerciales con actuales clientes, y potenciando oportunidades en mercados globales.</p>
         </div>
         <div class="image-box-image"><div class="rectangle-div"></div></div>
@@ -37,10 +39,32 @@
       <div class="image-box image-box-left">
         <div class="image-box-image"><div class="rectangle-div"></div></div>
           <div class="image-box-text">
-            <p>Con el apoyo de ANDE, el equipo de Gemma trabajó en el desarrollo de una herramienta digital accesible y fácil de usar para que las PYMEs uruguayas diagnostiquen y gestionen sus prácticas de sostenibilidad con foco en economía circular brindando herramientas de análisis para que la empresa pueda tomar decisiones informadas basadas en datos reales.</p>
+		  <h2>Beneficios para PYMES</h2>
+        <ul>    
+          <li>Generación de información clave sobre la operativa de la empresa</li>
+          <li>Identificación de los principales aspectos ambientales a gestionar</li>
+          <li>Identificación de oportunidades para la reducción de costos al optimizar el uso de recursos y minimizar desperdicios</li>
+          <li>Detección de mejoras en los procesos que pueden generar una mayor eficiencia operativa</li>
+          <li>Acceso a nuevas oportunidades de negocio, alineándose con clientes que buscan proveedores más sostenibles</li>
+          <li>Posibilidad de explorar nuevas líneas de productos y modelos de negocio circulares</li>
+        </ul>
         </div>
       </div>
     </div>
+    <div class="section">
+    <div class="image-box image-box-right">
+      <div class="image-box-image"><div class="rectangle-div"></div></div>
+        <div class="image-box-text">
+    <h2>Beneficios para Empresas Tractoras</h2>
+      <ul>    
+        <li>Mayor sostenibilidad en su cadena de suministro, reduciendo riesgos ambientales y económicos</li>
+        <li>Mejora en la trazabilidad de insumos y materias primas</li>
+        <li>Cumplimiento de estándares y normativas ambientales, facilitando certificaciones y requisitos de mercado</li>
+        <li>Refuerzo de su reputación en mercados que valoran la sostenibilidad</li>
+      </ul>
+      </div>
+    </div>
+  </div>
     <div class="section">
       <h2>Empresas Aliadas</h2>
       <div class="logo-slider">
