--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,4 +1,7 @@
-<p>Bienvenida <%= @email %>!</p>
+<div class="header-inner">
+  <%= image_tag("/images/Group.svg", size: "83x50") %>
+</div>
+<p>Bienvenida/o <%= @email %>!</p>
 
 <p>Por favor para confirmar tu cuenta a Gemma accede al siguiente link:</p>
 
