--- a/app/views/companies/shared/_links.html.erb
+++ b/app/views/companies/shared/_links.html.erb
@@ -11,7 +11,7 @@
 <% end %>
 
 <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
-  <%= link_to "¿No reciví el email con instrucciones?", new_confirmation_path(resource_name) %><br />
+  <%= link_to "No recibí el email con instrucciones", new_confirmation_path(resource_name) %><br />
 <% end %>
 
 <%- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
