--- a/app/assets/stylesheets/front.css
+++ b/app/assets/stylesheets/front.css
@@ -91,8 +91,8 @@ a {
 }
 .alert {
   border-radius: 8px;
-  background-color: var(--Feedback-Alert-Light);
-  border: 1px solid var(--Feedback-Alert-Dark);
+  background-color: var(--Feedback-Warning-Light);
+  border: 1px solid var(--Feedback-Warning-Dark);
   box-sizing: border-box;
   display: flex;
   flex-direction: row;
