Se quita columna en footer y se corrige typo en mail de nueva org

--- a/app/views/admin_mailer/new_company.html.erb
+++ b/app/views/admin_mailer/new_company.html.erb
@@ -1,6 +1,6 @@
 <body>
   <header></header>
-  <h1>Se ha creado una nuevva organización</h1>
+  <h1>Se ha creado una nueva organización</h1>
   <hr>
   <p>
     Hola Admin<br>
