Corrección de botón con error ortográfico

--- a/app/views/companies/dashboard.html.erb
+++ b/app/views/companies/dashboard.html.erb
@@ -68,7 +68,7 @@
                 <%= link_to "Descargar certificado", '/', class: "secondary-button" %>
               <% else %>
                 <div class="evaluation-date"><%= evaluation.updated_at %></div>
-                <%= link_to "Contniuar editando", edit_evaluation_path(evaluation), class: "main-button" %>
+                <%= link_to "Continuar editando", edit_evaluation_path(evaluation), class: "main-button" %>
               <% end %>
             </div>
           <% end %>
