--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -32,12 +32,12 @@
 		  <h2>¿Cómo la herramienta o hace?</h2>
           <p>La Plataforma busca nutrir esfuerzos ya implementados en el país (Ej. Estrategia Nacional de Economía Circular) facilitando una herramienta de gestión que permita integrar y profesionalizar las buenas prácticas en las pymes uruguayas, generando informes con identificación de mejoras, para profesionalizar la gestión estratégica, y potenciar la competitividad, afianzando los vínculos comerciales con actuales clientes, y potenciando oportunidades en mercados globales.</p>
         </div>
-        <div class="image-box-image"><div class="rectangle-div"></div></div>
+        <div class="image-box-image"><img src="/images/abeja.jpg"/></div>
       </div>
     </div>
     <div class="section">
       <div class="image-box image-box-left">
-        <div class="image-box-image"><div class="rectangle-div"></div></div>
+        <div class="image-box-image"><img src="/images/pymes.jpg"/></div>
           <div class="image-box-text">
 		  <h2>Beneficios para PYMES</h2>
         <ul>    
@@ -53,7 +53,7 @@
     </div>
     <div class="section">
     <div class="image-box image-box-right">
-      <div class="image-box-image"><div class="rectangle-div"></div></div>
+      <div class="image-box-image"><img src="/images/tractoras.jpg"/></div>
         <div class="image-box-text">
     <h2>Beneficios para Empresas Tractoras</h2>
       <ul>    
@@ -65,11 +65,11 @@
       </div>
     </div>
   </div>
-    <div class="section">
-      <h2>Empresas Aliadas</h2>
-      <div class="logo-slider">
-        
-      </div>
-    </div>
+#    <div class="section">
+#      <h2>Empresas Aliadas</h2>
+#      <div class="logo-slider">
+#        
+#      </div>
+#    </div>
   </div>
 </div> 
