Ajustes textos en planes
Incluye comentar secciones la fiunal para ocultar, espero no haberla cagado ahí.

--- a/app/views/static_pages/pricing.html.erb
+++ b/app/views/static_pages/pricing.html.erb
@@ -2,7 +2,7 @@
   <h1>Planes</h1>
   <div class="section pricing">
     <div class="image-box">
-      <div class="image-box-image"><div class="rectangle-div"></div></div>
+      <div class="image-box-image"><img src="/images/beneficios-pymes.jpg"/></div></div>
       <div class="image-box-text">
         <h2>Beneficios para las PYMES:</h2>
         <ul>
@@ -17,7 +17,7 @@
       <%= link_to "Comenzar ahora", new_company_registration_path(), class: "main-button" %>
     </div>
     <div class="image-box">
-      <div class="image-box-image"><div class="rectangle-div"></div></div>
+      <div class="image-box-image"><img src="/images/beneficios-tractoras.jpg"/></div></div>
       <div class="image-box-text">
         <h2>Beneficios para las Empresas Tractoras</h3>
         <ul>
@@ -28,26 +28,26 @@
       </div>
       <%= link_to "Comenzar ahora", new_company_registration_path(), class: "main-button" %>
     </div>
-    <div class="image-box">
-      <div class="image-box-image"><div class="rectangle-div"></div></div>
-      <div class="image-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu turpis molestie, dictum est a, mattis tellus. Sed dignissim, metus nec fringilla accumsan, risus sem sollicitudin lacus, ut interdum tellus elit sed risus. Maecenas eget condimentum velit, sit amet feugiat lectus.
+#    <div class="image-box">
+#      <div class="image-box-image"><div class="rectangle-div"></div></div>
+#      <div class="image-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu turpis molestie, dictum est a, mattis tellus. Sed dignissim, metus nec fringilla accumsan, risus sem sollicitudin lacus, ut interdum tellus elit sed risus. Maecenas eget condimentum velit, sit amet feugiat lectus.
+#
+#        Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent auctor purus luctus enim egestas, ac scelerisque ante pulvinar. Donec ut rhoncus ex. Suspendisse ac rhoncus nisl, eu tempor urna.
+#
+#        Curabitur vel bibendum lorem. Morbi convallis convallis diam sit amet lacinia. Aliquam in elementum tellus. Curabitur vel bibendum lorem. Morbi convallis convallis diam sit amet lacinia. Aliquam in elementum tellus.
+#      </div>
+#      <%= link_to "Comenzar ahora", new_company_registration_path(), class: "main-button" %>
+#    </div>
+  </div>
+#  <div class="section">
+#    <div class="image-box image-box-left">
+#      <div class="image-box-image"><div class="rectangle-div"></div></div>
+#      <div class="image-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu turpis molestie, dictum est a, mattis tellus. Sed dignissim, metus nec fringilla accumsan, risus sem sollicitudin lacus, ut interdum tellus elit sed risus. Maecenas eget condimentum velit, sit amet feugiat lectus.
 
         Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent auctor purus luctus enim egestas, ac scelerisque ante pulvinar. Donec ut rhoncus ex. Suspendisse ac rhoncus nisl, eu tempor urna.
 
         Curabitur vel bibendum lorem. Morbi convallis convallis diam sit amet lacinia. Aliquam in elementum tellus. Curabitur vel bibendum lorem. Morbi convallis convallis diam sit amet lacinia. Aliquam in elementum tellus.
-      </div>
-      <%= link_to "Comenzar ahora", new_company_registration_path(), class: "main-button" %>
-    </div>
-  </div>
-  <div class="section">
-    <div class="image-box image-box-left">
-      <div class="image-box-image"><div class="rectangle-div"></div></div>
-      <div class="image-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu turpis molestie, dictum est a, mattis tellus. Sed dignissim, metus nec fringilla accumsan, risus sem sollicitudin lacus, ut interdum tellus elit sed risus. Maecenas eget condimentum velit, sit amet feugiat lectus.
-
-        Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Praesent auctor purus luctus enim egestas, ac scelerisque ante pulvinar. Donec ut rhoncus ex. Suspendisse ac rhoncus nisl, eu tempor urna.
-
-        Curabitur vel bibendum lorem. Morbi convallis convallis diam sit amet lacinia. Aliquam in elementum tellus. Curabitur vel bibendum lorem. Morbi convallis convallis diam sit amet lacinia. Aliquam in elementum tellus.
-      </div>
-    </div>
-  </div>
+#      </div>
+#    </div>
+#  </div>
 </div>
